# string-matching

./: .gitignore  Dockerfile  Makefile  README.md  app.py  cli.py  leftcsv.csv  output.csv  pipeline.py  pyproject.toml  requirements.txt  rightcsv.csv  stringmatch.py
file-examples/: input.csv
include/: python3.7m
lib/python3.7/: LICENSE.txt  __future__.py  _bootlocale.py  _collections_abc.py  _dummy_thread.py  _weakrefset.py  abc.py  base64.py  bisect.py  codecs.py  collections  config-3.7m-darwin  copy.py  copyreg.py  encodings  enum.py  fnmatch.py  functools.py  genericpath.py  hashlib.py  heapq.py  hmac.py  imp.py  importlib  io.py  keyword.py  lib-dynload  linecache.py  locale.py  ntpath.py  operator.py  orig-prefix.txt  os.py  posixpath.py  random.py  re.py  reprlib.py  rlcompleter.py  shutil.py  sre_compile.py  (+11 more)
pipeline/: __init__.py
tests/: test_string_matching_cli.py
